# OpenFin

./: FUTURE.md  README.md  founder-cli-spec.md  pyproject.toml  pytest.toml
docs/: README.md  architecture.md  development.md  operations.md  sdk.md  usage.md
openfin/: __init__.py  __main__.py  agent_commands.py  agent_run.py  agent_store.py  claude_adapter.py  cli.py  codex_adapter.py  daemon.py  index.py  review.py  search.py  storage.py  system.py  task.py  telegram.py  versioning.py
tests/: helpers.py  test_agent_run.py  test_agent_store.py  test_agents_command.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_compact.py  test_context.py  test_daemon.py  test_dates.py  test_delivery.py  test_digest.py  test_help.py  test_idea.py  test_index.py  test_review.py  test_scheduler.py  test_search.py  test_storage.py  test_task.py  test_telegram.py  test_versioning.py
