[project]
name = "openfin"
version = "0.1.0"
description = "OpenFin: a local-first founder helper CLI for project memory, tasks, search, and context packs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.2.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
f = "openfin.cli:app"
openfin = "openfin.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openfin"]
