[project]
name = "openfin"
version = "0.1.0"
description = "OpenFin: a local-first founder helper CLI for project memory, tasks, search, and context packs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
f = "openfin.cli:main_entry"
openfin = "openfin.cli:main_entry"
openfind = "openfin.daemon:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openfin"]
